Fix slider divider z-index
Fix an issue with the slider panel occluding the drop down app
selector’s menu.

--- a/client/less/visual-composer.less
+++ b/client/less/visual-composer.less
@@ -21,7 +21,7 @@
     width: 2rem;
     background: @grey-2;
     cursor: col-resize;
-    z-index: 100;
+    z-index: 10;
     display: flex;
     align-items: center;
 
